# hcdc

./: .gitignore  .pre-commit-config.yaml  AUTHORS  ChangeLog  README.md  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: hcdc_run.yaml
src/: __init__.py  image_processing.py  main.py  text_processing.py
