[metadata]
name = hcdc
summary = Detect unwanted characters in images inside the Open Telekom Cloud helpcenter
description_file =
    README.md
author = Open Telekom Cloud
home_page = https://open.telekom.cloud/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = src

[options.entry_points]
console_scripts =
  hcdc = src.main:main